[package]
name = "cf-h2-adaptive-window"
version = "0.1.0"
authors = ["Anthony Ramine <nox@nox.paris>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.7", features = ["http2"] }
hyper-rustls = "0.22.1"
pretty_env_logger = "0.4"
rustls = "0.19"
rustls-native-certs = "0.5"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", default-features = false, features = ["max_level_trace", "release_max_level_trace", "log-always"] }
